# rust-lakefs-utils

./: .gitignore
lakefs_rust_cli/lakefs-rust/: .gitignore  Cargo.toml  LICENSE  README.md  clean_tests.py  fix_client.py  fix_utils_test.patch  run_coverage.sh  run_tests.sh  test_setup_report.txt
lakefs_rust_cli/lakefs-rust/.github/workflows/: test.yml
lakefs_rust_cli/lakefs-rust/crates/lakectl-cli/: Cargo.toml
lakefs_rust_cli/lakefs-rust/crates/lakectl-cli/src/: cli.rs  config.rs  config.rs.backup  main.rs  utils.rs
lakefs_rust_cli/lakefs-rust/crates/lakectl-cli/src/commands/: branch.rs  branch.rs.backup  commit.rs  diff.rs  fs.rs  local.rs  merge.rs  mod.rs  repo.rs
lakefs_rust_cli/lakefs-rust/crates/lakefs-api/: Cargo.toml
lakefs_rust_cli/lakefs-rust/crates/lakefs-api/src/: client.rs  client.rs.backup  error.rs  lib.rs  models.rs  uri.rs
lakefs_rust_cli/lakefs-rust/crates/lakefs-auth/: Cargo.toml
lakefs_rust_cli/lakefs-rust/crates/lakefs-auth/src/: auth_provider.rs  auth_provider.rs.backup  aws_iam.rs  basic.rs  error.rs  lib.rs
lakefs_rust_cli/lakefs-rust/crates/lakefs-local/: Cargo.toml
lakefs_rust_cli/lakefs-rust/crates/lakefs-local/src/: changes.rs  changes.rs.backup  error.rs  index.rs  lib.rs  sync.rs
lakefs_rust_cli/lakefs-rust/crates/lakefs-test-utils/: Cargo.toml
lakefs_rust_cli/lakefs-rust/crates/lakefs-test-utils/src/: lib.rs.bak
lakefs_rust_cli/lakefs-rust/tests/: README.md  integration_test.rs
lakefs_rust_cli/utils/: add_comp_unit_tests.sh  add_comprehensive_tests.sh  careful_tests.sh  check_structure.sh  clean_start.sh  comprehensive_fix.sh  diagnost-issues.sh  fix_dup_tests.sh  fix_missing_deps.sh  fix_test_issue.sh  fix_utils.sh  lakefs-rust-setup.sh  manual_tests.sh  setup-tests.sh
