[workspace]
resolver = "2"
members = [
    "crates/lakefs-api",
    "crates/lakefs-auth", 
    "crates/lakefs-local",
    "crates/lakectl-cli",
    "crates/lakefs-test-utils",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["lakeFS Rust Implementation"]

[workspace.dependencies]
# Common dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.5"  # Added missing dependency

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }

# AWS SDK
aws-config = "1.1"
aws-sdk-sts = "1.1"
aws-sigv4 = { version = "1.3", features = ["sign-http"] }
aws-types = "1.1"
aws-credential-types = "1.1"

# CLI dependencies
clap = { version = "4.4", features = ["derive", "env"] }
indicatif = "0.17"
config = "0.13"
home = "0.5"
directories = "5.0"

# Async trait support
async-trait = "0.1"
