[package]
name = "lakectl-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "lakectl"
path = "src/main.rs"

[dependencies]
# Local dependencies
lakefs-api = { path = "../lakefs-api" }
lakefs-auth = { path = "../lakefs-auth" }
lakefs-local = { path = "../lakefs-local" }

# Shared workspace dependencies
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
config.workspace = true
home.workspace = true
directories.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
indicatif.workspace = true

# CLI-specific dependencies
colored = "2.0"
tabled = "0.15"
human_bytes = "0.4"  # Fixed: underscore not hyphen
bytes.workspace = true
dirs = "6.0.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
serde_yaml = "0.9"
wiremock = "0.5"
lakefs-test-utils = { path = "../lakefs-test-utils" }
