[package]
name = "lakefs-api"
version.workspace = true
edition.workspace = true

[dependencies]
# Shared workspace dependencies
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
bytes.workspace = true

# API-specific dependencies
url = "2.5"
futures = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
wiremock = "0.5"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.5"
serde_yaml = "0.9"
lakefs-test-utils = { path = "../lakefs-test-utils" }
